# ferris-chan

./: README.md  pyproject.toml
.github/: copilot-instructions.md
src/ferris_chan/: main.py
